# pixy

./: .codecov.yml  .coveralls.yml  .gitignore  LICENSE  Makefile  README.md  development-requirements.txt  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  test.yml
pixy/: EscapeSequence.py  ExtendedColour.py  Font.py  TrueColour.py  __init__.py  decorators.py  escape_sequence.py  extended_colour.py  font.py  helpers.py  metadata.py  pring.py  true_colour.py
pixy/colours/: __init__.py  background.py  constants.py  foreground.py
tests/: AdditionalTests.py  ColourTests.py  DecoratorTests.py  EscapeSequenceTests.py  FontTests.py  HelperTests.py  __init__.py  test_additional.py  test_colour.py  test_decorator.py  test_escape_sequence.py  test_font.py  test_helper.py  test_metadata.py
