[tool.poetry]
name = "pixy"
version = "1.0.3"
description = "Add colour and style to terminal text"
readme = "README.md"
authors = ["Kian Cross <kian@kiancross.co.uk>"]
maintainers = ["Kian Cross <kian@kiancross.co.uk>"]
license = "MIT"
homepage = "https://github.com/kiancross/pixy"
repository = "https://github.com/kiancross/pixy"
documentation = "https://github.com/kiancross/pixy"
keywords = ["colour", "color", "terminal", "style", "text"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
black = "^23.1"
mypy = "^0.971"
pytest = "^7.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
